[gd_scene load_steps=7 format=2]

[ext_resource path="res://J-dj/Disc.tscn" type="PackedScene" id=1]
[ext_resource path="res://Audio/loops/Funky Roomba Funky Low End.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/loops/Funky Roomba Funky Drums.wav" type="AudioStream" id=3]
[ext_resource path="res://J-dj/DJTest.gd" type="Script" id=4]
[ext_resource path="res://Audio/loops/Funky Roomba Funky Groove.wav" type="AudioStream" id=5]
[ext_resource path="res://Dialog/Fonts/montserrat_regular_40.tres" type="DynamicFont" id=6]

[node name="Spatial" type="Spatial"]
script = ExtResource( 4 )

[node name="CSGBox" type="CSGBox" parent="."]
width = 8.10143
height = 0.304766
depth = 4.27501

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 2.87943, 0 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 0.76138, 0.529949, -0.373436, 0, 0.576019, 0.817437, 0.648306, -0.62238, 0.438569, 0, 5.64185, 1.90561 )
light_color = Color( 0.482353, 0.133333, 0.133333, 1 )
light_energy = 16.0
light_indirect_energy = 9.26
light_specular = 0.34
shadow_enabled = true
spot_range = 10.2834

[node name="StaticBody" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -1.27965, 0.202979, 0 )

[node name="AudioStreamPlayer2D" parent="StaticBody" index="2"]
stream = ExtResource( 2 )

[node name="StaticBody2" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer2D" parent="StaticBody2" index="2"]
stream = ExtResource( 3 )

[node name="StaticBody3" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 1.22292, 0.202979, 0 )

[node name="AudioStreamPlayer2D" parent="StaticBody3" index="2"]
stream = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_right = 319.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="StaticBody"]

[editable path="StaticBody2"]

[editable path="StaticBody3"]
